--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./assets/css/style.css" />
-    <title>Work Day Scheduler</title>
+    <title>Daily Events Schedule</title>
   </head>
 
   <body>
     <header class="p-5 mb-4 border-5 border-bottom border-dark text-center">
-      <h1 class="display-3">Work Day Scheduler</h1>
+      <h1 class="display-3">Daily Events Schedule</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
     </header>
